<resources>
    <string name="app_name">Money Splitter</string>

    <!--main-->
    <string name="add_meeting_btn">Dodaj spotkanie</string>

    <!--add_meeting-->
    <string name="title_activity_add_meeting">Dodaj nowe spotkanie</string>
    <string name="meeting_name">Nazwa spotkania</string>
    <string name="meeting_days">Ilość dni</string>
    <string name="no_meeting_list_info">Żeby dodać spotkanie kliknij (+) i\n
        1. wprowadź dane spotkania\n
        2. stwórz listę osoób, z którymi będziesz się rozliczać\n
        3. stwórz listę rzeczy, za które będziecie płacić\n\n
        Miłego spotkania ;)</string>
    <string name="add_btn">Dodaj</string>
    <string name="error_info">"Upsss"</string>

    <!--add_person-->
    <string name="title_activity_add_person">Dodaj nową osobę</string>
    <string name="person_name">Imię</string>
    <string name="person_days">Ilość dni</string>

    <!--add_person_list-->
    <string name="title_activity_add_person_list">Lista osób</string>
    <string name="add_person_btn">Dodaj osobę</string>
    <string name="next_view">Dalej</string>

    <!--add_for_what-->
    <string name="title_activity_add_for_what">Dodaj za co płacicie</string>
    <string name="for_what_name">Nazwa za co:</string>
    <string name="add_for_what_btn">Dodaj za co płacicie</string>

    <!--add_for_what_list-->
    <string name="title_activity_add_for_what_list">Lista tego za co płacicie</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="name_validation_info">Wpisz nazwę spotkania</string>
    <string name="no_persons_info">Nie dodałeś jeszcze żadnej osoby, aby to zrobić, kliknij w menu.</string>

    <!--main_list-->
    <string name="day"> dzień</string>
    <string name="days"> dni</string>

    <!--add_pay_action-->
    <string name="pay_radio">płacę</string>
    <string name="give_back_radio">oddaję</string>
    <string name="person">Kto:</string>
    <string name="goal">Za co:</string>
    <string name="value">Ile:</string>

</resources>
