<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".AddPayActionActivity">

    <RadioGroup
        android:id="@+id/radioGoalsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/pay_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="checkPayButton"
            android:text="@string/pay_radio" />

        <RadioButton
            android:id="@+id/give_back_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="checkPayButton"
            android:text="@string/give_back_radio" />

    </RadioGroup>

    <TextView
        android:id="@+id/persons_spinner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/person"/>

    <Spinner
        android:id="@+id/persons_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/goals_spinner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/goal"/>

    <Spinner
        android:id="@+id/goals_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"/>

    <EditText
        android:id="@+id/payment_value_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/add_payment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/add_btn"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>